[package]

name = "PCiano"
version = "0.0.1"
authors = ["bryal"]

[[bin]]
name = "PCiano"
path = "src/main.rs"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

# [dependencies.graphics]
# git = "https://github.com/pistondevelopers/rust-graphics"

# [dependencies.event]
# git = "https://github.com/PistonDevelopers/event"

# [dependencies.sdl2_window]
# git = "https://github.com/pistondevelopers/sdl2_window"

#[dependencies.glfw_window]
#git = "https://github.com/PistonDevelopers/glfw_window"