[package]

name = "PCiano"
version = "0.0.1"
authors = ["bryal <96.bryal@gmail.com>"]

[[bin]]
name = "PCiano"
path = "src/main.rs"

[dependencies]
portaudio = "~0.3.0"
time = "*"

[dependencies.graphics]
git = "https://github.com/pistondevelopers/rust-graphics"

[dependencies.event]
git = "https://github.com/PistonDevelopers/event"

[dependencies.sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"